banner section Making

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
         </script>
     </head>
     <body>
+        <!-- banner section start -->
         <section id="banner">
             <div class="container mx-auto">
                 <h1 class="text-5xl font-bold text-orange-500 text-center">Select Your Best Three</h1>
+                <img src="images/shapes.png" alt="shapes" class="w-40 mx-auto" />
+                <p class="text-center px-72">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             </div>
         </section>
+        <!-- banner section end -->
         <!-- js script -->
         <script src="js/tailwind.config.js"></script>
     </body>
