--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                             <button class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
                         </div>
                     </div>
+
                     <!-- player items -->
                     <div class="player_items border-solid border-2 border-gray-600">
                         <div class="player_image overflow-hidden">
@@ -76,6 +77,7 @@
                             <button class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
                         </div>
                     </div>
+
                     <!-- player items -->
                     <div class="player_items border-solid border-2 border-gray-600">
                         <div class="player_image overflow-hidden">
@@ -91,6 +93,7 @@
                             <button class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
                         </div>
                     </div>
+
                     <!-- player items -->
                     <div class="player_items border-solid border-2 border-gray-600">
                         <div class="player_image overflow-hidden">
@@ -106,6 +109,7 @@
                             <button class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
                         </div>
                     </div>
+
                     <!-- player items -->
                     <div class="player_items border-solid border-2 border-gray-600">
                         <div class="player_image overflow-hidden">
@@ -121,6 +125,7 @@
                             <button class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
                         </div>
                     </div>
+
                     <!-- player items -->
                     <div class="player_items border-solid border-2 border-gray-600">
                         <div class="player_image overflow-hidden">
@@ -141,6 +146,7 @@
 
                 <!-- sidebar section start -->
                 <div class="sidesbar col-span-1">
+                    <!-- selected_3 section -->
                     <div class="Selected_3 bg-black p-10">
                         <h3 class="text-3xl font-bold text-white text-center">Selected-3</h3>
                         <img src="images/shapes-line.png" alt="shape line" class="w-40 mx-auto mb-7" />
@@ -150,13 +156,18 @@
                             <li class="text-gray-400 text-xl py-2">3. <span class="text-white">Joe Hart</span></li>
                         </ul>
                     </div>
-                    <div class="Selected_3 bg-black p-10 mt-5">
+
+                    <!-- budget section -->
+                    <div class="budget bg-black p-10 mt-5">
                         <h3 class="text-3xl font-bold text-white text-center">Budget</h3>
                         <img src="images/shapes-line.png" alt="shape line" class="w-40 mx-auto mb-7" />
+
+                        <!-- input_items section -->
                         <div class="input_items text-xl">
                             <div class="input flex justify-between">
                                 <label for="per_player" class="text-gray-400">Per Player</label>
-                                <input id="per_player" type="text" class="bg-transparent border-solid border-2 border-white py-2 px-3 ml-2 w-48" />
+                                <!-- per_player input -->
+                                <input id="per_player" type="text" class="bg-transparent border-solid border-2 border-white py-2 px-3 ml-2 w-36" />
                             </div>
                             <button id="budget-calculate" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Calculate</button>
                             <ul class="flex justify-between">
@@ -164,14 +175,18 @@
                                 <li class="text-white">$<span>5000</span></li>
                             </ul>
                         </div>
-                        <div class="input_items text-xl mt-10">
+
+                        <!-- input_items section -->
+                        <div class="input_items mt-10">
                             <div class="input flex justify-between">
-                                <label for="per_player" class="text-gray-400">Manager</label>
-                                <input id="per_player" type="text" class="bg-transparent border-solid border-2 border-white inline py-2 px-3 ml-2 w-48" />
+                                <label for="manager" class="text-gray-400">Manager</label>
+                                <!-- manager input -->
+                                <input id="manager" type="text" class="bg-transparent border-solid border-2 border-white inline py-2 px-3 ml-2 w-36" />
                             </div>
                             <div class="input flex justify-between mt-5">
-                                <label for="per_player" class="text-gray-400">Coach</label>
-                                <input id="per_player" type="text" class="bg-transparent border-solid border-2 border-white py-2 px-3 ml-2 w-48" />
+                                <label for="coach" class="text-gray-400">Coach</label>
+                                <!-- coach -->
+                                <input id="coach" type="text" class="bg-transparent border-solid border-2 border-white py-2 px-3 ml-2 w-36" />
                             </div>
                             <button id="budget-calculate" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Calculate</button>
                             <ul class="flex justify-between">
