--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                             <img src="images/image-1.jpg" alt="lionel Messi" />
                         </div>
                         <div class="items_body p-5">
-                            <h3 class="text-3xl font-bold text-white text-center">Lionel Messi</h3>
+                            <h3 id="player_name" class="text-3xl font-bold text-white text-center">Lionel Messi</h3>
                             <ul class="list-none flex justify-center gap-2">
                                 <li class="text-gray-500">35 Goals</li>
                                 <li class="text-orange-600 px-2">|</li>
                                 <li class="text-gray-500">120 Assist</li>
                             </ul>
-                            <button class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
+                            <button id="select" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white" value="Lionel Messi">Select</button>
                         </div>
                     </div>
 
@@ -68,13 +68,13 @@
                             <img src="images/image-2.jpg" alt="lionel Messi" />
                         </div>
                         <div class="items_body p-5">
-                            <h3 class="text-3xl font-bold text-white text-center">Naimar</h3>
+                            <h3 id="player_name" class="text-3xl font-bold text-white text-center">Naimar</h3>
                             <ul class="list-none flex justify-center gap-2">
                                 <li class="text-gray-500">35 Goals</li>
                                 <li class="text-orange-600 px-2">|</li>
                                 <li class="text-gray-500">120 Assist</li>
                             </ul>
-                            <button class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
+                            <button id="select" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white" value="Naimar">Select</button>
                         </div>
                     </div>
 
@@ -84,13 +84,13 @@
                             <img src="images/image-3.jpg" alt="lionel Messi" />
                         </div>
                         <div class="items_body p-5">
-                            <h3 class="text-3xl font-bold text-white text-center">Cristiano Ronaldo</h3>
+                            <h3 id="player_name" class="text-3xl font-bold text-white text-center">Cristiano Ronaldo</h3>
                             <ul class="list-none flex justify-center gap-2">
                                 <li class="text-gray-500">35 Goals</li>
                                 <li class="text-orange-600 px-2">|</li>
                                 <li class="text-gray-500">120 Assist</li>
                             </ul>
-                            <button class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
+                            <button id="select" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white" value="Cristiano Ronaldo">Select</button>
                         </div>
                     </div>
 
@@ -100,13 +100,13 @@
                             <img src="images/image-4.jpg" alt="lionel Messi" />
                         </div>
                         <div class="items_body p-5">
-                            <h3 class="text-3xl font-bold text-white text-center">Zlatan Ibrahimovic</h3>
+                            <h3 id="player_name" class="text-3xl font-bold text-white text-center">Zlatan Ibrahimovic</h3>
                             <ul class="list-none flex justify-center py-5 gap-2">
                                 <li class="text-gray-500">35 Goals</li>
                                 <li class="text-orange-600 px-2">|</li>
                                 <li class="text-gray-500">120 Assist</li>
                             </ul>
-                            <button class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
+                            <button id="select" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
                         </div>
                     </div>
 
@@ -116,13 +116,13 @@
                             <img src="images/image-5.jpg" alt="lionel Messi" />
                         </div>
                         <div class="items_body p-5">
-                            <h3 class="text-3xl font-bold text-white text-center">Joe Hart</h3>
+                            <h3 id="player_name" class="text-3xl font-bold text-white text-center">Joe Hart</h3>
                             <ul class="list-none flex justify-center py-5 gap-2">
                                 <li class="text-gray-500">16 Goals</li>
                                 <li class="text-orange-600 px-2">|</li>
                                 <li class="text-gray-500">120 Assist</li>
                             </ul>
-                            <button class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
+                            <button id="select" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
                         </div>
                     </div>
 
@@ -132,13 +132,13 @@
                             <img src="images/image-6.jpg" alt="lionel Messi" />
                         </div>
                         <div class="items_body p-5">
-                            <h3 class="text-3xl font-bold text-white text-center">Xavi</h3>
+                            <h3 id="player_name" class="text-3xl font-bold text-white text-center">Xavi</h3>
                             <ul class="list-none flex justify-center py-5 gap-2">
                                 <li class="text-gray-500">25 Goals</li>
                                 <li class="text-orange-600 px-2">|</li>
                                 <li class="text-gray-500">12 Assist</li>
                             </ul>
-                            <button class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
+                            <button id="select" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white">Select</button>
                         </div>
                     </div>
                 </div>
@@ -203,5 +203,6 @@
 
         <!-- js script -->
         <script src="js/tailwind.config.js"></script>
+        <script src="js/select-three.js"></script>
     </body>
 </html>
