--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
         <!-- google fonts link -->
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
 
-        <!-- style css -->
-        <link rel="stylesheet" href="css/style.css" />
-
         <!-- tailwind css -->
         <script src="https://cdn.tailwindcss.com"></script>
         <script>
@@ -25,6 +22,9 @@
                 },
             };
         </script>
+
+        <!-- style css -->
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
         <!-- banner section start -->
@@ -58,7 +58,7 @@
                                 <li class="text-orange-600 px-2">|</li>
                                 <li class="text-gray-500">120 Assist</li>
                             </ul>
-                            <button id="select" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white" value="Lionel Messi">Select</button>
+                            <button id="select" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white" value="Lionel Messi" data-item="Lionel Messi">Select</button>
                         </div>
                     </div>
 
@@ -74,7 +74,7 @@
                                 <li class="text-orange-600 px-2">|</li>
                                 <li class="text-gray-500">120 Assist</li>
                             </ul>
-                            <button id="select" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white" value="Naimar">Select</button>
+                            <button id="select" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white" value="Naimar" data-item="Naimar">Select</button>
                         </div>
                     </div>
 
@@ -90,7 +90,7 @@
                                 <li class="text-orange-600 px-2">|</li>
                                 <li class="text-gray-500">120 Assist</li>
                             </ul>
-                            <button id="select" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white" value="Cristiano Ronaldo">Select</button>
+                            <button id="select" class="w-full px-5 py-2 my-3 uppercase bg-blue-950 hover:bg-blue-500 text-white" value="Cristiano Ronaldo" data-item="Cristiano Ronaldo">Select</button>
                         </div>
                     </div>
 
@@ -150,11 +150,7 @@
                     <div class="Selected_3 bg-black p-10">
                         <h3 class="text-3xl font-bold text-white text-center">Selected-3</h3>
                         <img src="images/shapes-line.png" alt="shape line" class="w-40 mx-auto mb-7" />
-                        <ul id="selected_palyer" class="pl-3">
-                            <li class="text-gray-400 text-xl py-2">1. <span class="text-white">Naimar</span></li>
-                            <li class="text-gray-400 text-xl py-2">2. <span class="text-white">Xavi</span></li>
-                            <li class="text-gray-400 text-xl py-2">3. <span class="text-white">Joe Hart</span></li>
-                        </ul>
+                        <ul id="selected_palyer" class="pl-3"></ul>
                     </div>
 
                     <!-- budget section -->
